--- a/src/indexStyle.css
+++ b/src/indexStyle.css
@@ -64,8 +64,25 @@ body, html {
   color: white;
 }
 
+/*DISPLAY*/
+.displayDiv {
+  margin: auto;
+  float: center;
+  width: 50%;
+  height: 30%;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.displaySqaureDiv{
+  border: 2px solid rgb(93, 93, 93);
+  float: center;
+  height: 40px;
+  width: 40px;
+  margin: 1px;
+  padding: 0;
+}
 
-/*PALETTE*/
+/*PALETTE BUTTONS*/
 .paletteDiv {
   margin: auto;
   float: center;
@@ -86,6 +103,32 @@ body, html {
   float: center;
   height: 40px;
   width: 40px;
+  margin: 1px;
+  padding: 0;
+  cursor: pointer;
+}
+
+/*BACKSPACE BUTTON*/
+.backspaceButtonDiv{
+  border: 2px solid rgb(17, 17, 17);
+  border-radius: 5px;
+  background-color: rgb(211, 211, 211);
+  color:rgb(17, 17, 17);
+  height: 40px;
+  width: 60px;
+  margin: 1px;
+  padding: 0;
+  cursor: pointer;
+}
+
+/*ENTER BUTTON*/
+.enterButtonDiv{
+  border: 2px solid rgb(17, 17, 17);
+  border-radius: 5px;
+  background-color: rgb(211, 211, 211);
+  color:rgb(17, 17, 17);
+  height: 40px;
+  width: 69px;
   margin: 1px;
   padding: 0;
   cursor: pointer;
